# libaa_plugin

./: .gitmodules  CMakeLists.txt  libaa_processor_parameters_manager.h
gain/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
moorer_reverb/: CMakeLists.txt  PluginProcessor.h
schroeder_reverb/: CMakeLists.txt  PluginProcessor.h
